--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>FSA UNI App Template</title>
+    <title>Combat Wombat </title>
     <script src='/dist/main.js' defer></script>
     <link rel='stylesheet' href='/static/styles.css' />
   </head>
