--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Combat Wombat </title>
     <script src='/dist/main.js' defer></script>
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|IM+Fell+Great+Primer+SC|Dosis|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='/static/styles.css' />
   </head>
   <body>
