--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id='root'></div>
-    <div>
+    <!-- <div>
     <footer class="footer-container">
       <section>
         <h2>Customer Care</h2>
@@ -33,6 +33,6 @@
         <a href="">Take a Tour</a>
       </section>
     </footer>
-  </div>
+  </div> -->
   </body>
 </html>
